# sysprog

./: .gitignore
coroutine-merge-sort/: coro.h  coro_data.h  dynamic_memory_management.c  dynamic_memory_management.h  main.c
coroutine_sort/: CMakeLists.txt  coro.c  elem.h  errors.h  merge_sort.c  merge_sort.h
shell/: Makefile  analyze.c  analyze.h  analyzer.c  analyzer.h  command.h  errors.h  heap.c  heap.h  list.h  main.c  pipeline.h  shell.c  shell.h  shell_errors.h  token.h  tokenize.c  tokenize.h  tokenizer.c  tokenizer.h
tasks/1/: CMakeLists.txt  main.c
